---------------------------------------------------------------------------------------------------
Version: 0.13.0
Date: ????
  Features:
    - [position] Added `position.ge` and `position.gt` comparisons.
---------------------------------------------------------------------------------------------------
Version: 0.12.9
Date: 2023-06-01
  Bugfixes:
    - Fixed Chinese translation making the mod unloadable (#53)
---------------------------------------------------------------------------------------------------
Version: 0.12.8
Date: 2023-05-29
  Bugfixes:
    - [dictionary-lite] Fixed that the total strings count did not include "initial_contents" strings
---------------------------------------------------------------------------------------------------
Version: 0.12.7
Date: 2023-04-30
  Features:
    - Added `flib_nav_(backward|forward)_(black|white|disabled)` sprites
    - Added `flib_titlebar_separator_line` and `flib_titlebar_search_textfield` styles
  Changes:
    - Updated base dependency to 1.1.80
---------------------------------------------------------------------------------------------------
Version: 0.12.6
Date: 2023-03-20
  Bugfixes:
    - [gui-lite] Fixed that drag_target was not restored to GUI elem definitions after being used in gui.add
---------------------------------------------------------------------------------------------------
Version: 0.12.5
Date: 2023-03-09
  Features:
    - `dictionary-lite` and `gui-lite` modules are now compatible with the core `event_handler`
  Bugfixes:
    - [bounding-box] Fixed `bounding_box.from_dimensions()` returning a 0x0 area at left_top (#49)
    - Fixed `selected` button styles having an extra vertical offset when clicked
---------------------------------------------------------------------------------------------------
Version: 0.12.4
Date: 2022-12-30
  Changes:
    - flib_selected_frame_action_button and flib_selected_tool_button styles now have a vertical offset