@@ -3,6 +3,8 @@ Version: 0.13.0
 Date: ????
   Features:
     - [position] Added `position.ge` and `position.gt` comparisons.
+  Bugfixes:
+    - [bounding-box] Fixed `bounding_box.recenter_on()` not properly preserving box dimensions.
 ---------------------------------------------------------------------------------------------------
 Version: 0.12.9
 Date: 2023-06-01
